# jmdict-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs  rustfmt.toml
.github/workflows/: rust.yml
jmdict-load/: Cargo.toml
jmdict-load/src/: lib.rs
src/: download.rs  lib.rs
src/domain/: mod.rs
