[package]
name = "jmdict-rs"
version = "0.1.0"
authors = ["Paweł Kamiński <kaminski_pawel@icloud.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0.26"
tar = "0.4.38"
